chapter page now says chapter title instead of number

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -184,6 +184,11 @@
         <activity
             android:name=".HomePage.ManageLanguageActivity"
             android:exported="true" />
+
+        <!-- View courses  Page -->
+        <activity
+            android:name=".HomePage.ViewCoursesActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
